# Sync

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/core/: auth.rs  client.rs  net.rs  server.rs
src/types/: configclnt.rs  configsrv.rs  dirtoarhiv.rs
src/utils/: cli.rs  listdirs.rs  macros.rs
