[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "3.1.8", features = ["derive"]}
fern = "0.6.1"
log = "0.4.16"
chrono = "0.4"
bytes = "1.1.0"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
hostname = "0.3.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
filetime = "0.2.16"
tokio-io-timeout="1.2.0"
async-recursion="1.0.0"
rand = "0.8.5"
lzzzz = "1.0.3"

[build-dependencies]
winres = "0.1"


